[gd_scene load_steps=14 format=2]

[ext_resource path="res://SnowballFight/Player.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.101961, 0, 1, 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )
radius = 0.5
mid_height = 0.5

[sub_resource type="CapsuleShape" id=3]
radius = 0.5
height = 0.5

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )
size = Vector2( 0.005, 0.005 )

[sub_resource type="PlaneMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_albedo_tex_force_srgb = true
albedo_color = Color( 1, 1, 0, 0 )

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.75, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2 )
}

[sub_resource type="Animation" id=9]
resource_name = "SpawnGreen"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.392157, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=10]
tracks/0/type = "bezier"
tracks/0/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.392157, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=11]
resource_name = "SpawnYellow"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Pivot/Camera/ColorPlane:material/0:albedo_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.392157, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="CapsuleShape" id=12]
radius = 0.5

[node name="Player" type="StaticBody" groups=[
"Player",
]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Pivot" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.627714, 0 )
current = true

[node name="AimCast" type="RayCast" parent="Pivot/Camera"]
enabled = true
exclude_parent = false
cast_to = Vector3( 0, 0, -1000 )
collision_mask = 5
collide_with_areas = true

[node name="MeshInstance" type="MeshInstance" parent="Pivot/Camera"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.5 )
mesh = SubResource( 5 )
material/0 = null

[node name="ShootCast" type="RayCast" parent="Pivot/Camera"]
transform = Transform( 1, 0, 0, 0, 0.939693, -0.34202, 0, 0.34202, 0.939693, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1000 )
collision_mask = 5

[node name="ColorPlane" type="MeshInstance" parent="Pivot/Camera"]
transform = Transform( 2, 0, 0, 0, -4.37114e-08, -2, 0, 1, -8.74228e-08, 0, 0, -1 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Duck = SubResource( 8 )
anims/SpawnGreen = SubResource( 9 )
anims/SpawnRed = SubResource( 10 )
anims/SpawnYellow = SubResource( 11 )

[node name="Area" type="Area" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 12 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
